# GeoRBF

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  V1_SCOPE.md
.codex/: config.toml
.codex/agents/: math_reviewer.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  requirement.yml
.github/workflows/: ci.yml
benches/: README.md  REQ-ANISO-001.md  REQ-KCALC-001.md  REQ-KERNEL-002.md  REQ-KERNEL-003.md  REQ-KERNEL-004.md
changes/: ISSUE-31.md  REQ-ANISO-001.md  REQ-ANISO-002.md  REQ-ANISO-003.md  REQ-BOOTSTRAP-001.md  REQ-CENTER-001.md  REQ-CONTOUR-001.md  REQ-CONTOUR-002.md  REQ-CONTOUR-003.md  REQ-CONVEX-001.md  REQ-COORD-001.md  REQ-CPD-001.md  REQ-DIAG-001.md  REQ-DIM-001.md  REQ-EXEC-001.md  REQ-FIELD-001.md  REQ-FUNC-001.md  REQ-INFEAS-001.md  REQ-IR-001.md  REQ-KCALC-001.md  REQ-KERNEL-001.md  REQ-KERNEL-002.md  REQ-KERNEL-003.md  REQ-KERNEL-004.md  REQ-LEVEL-001.md  REQ-LINEQ-001.md  REQ-MODEL-001.md  REQ-NORMAL-001.md  REQ-ORIENT-001.md  REQ-PERF-001.md  REQ-POLY-001.md  REQ-PROJECT-001.md  REQ-SOFT-001.md  REQ-SOLVE-001.md  REQ-SPARSE-001.md  REQ-SPIKE-001.md  REQ-SPIKE-002.md  REQ-SPIKE-003.md  REQ-SPIKE-004.md  REQ-TANGENT-001.md  (+5 more)
crates/georbf/: Cargo.toml
crates/georbf-cli/: Cargo.toml
crates/georbf-cli/src/: main.rs
crates/georbf-ffi/: Cargo.toml
crates/georbf-ffi/src/: lib.rs
crates/georbf-python/: Cargo.toml
crates/georbf-python/src/: lib.rs
crates/georbf/benches/: atomic_functionals.rs  center_selection.rs  compact_sparse_field.rs  constraint_diagnostics.rs  convex_solver.rs  cpd_rank_nullspace.rs  dense_equality_solver.rs  field_assembly.rs  fitted_field_evaluation.rs  global_anisotropy.rs  isolines.rs  isosurfaces.rs  level_compilation.rs  level_points.rs  linear_constraint_compilation.rs  local_thickness_compilation.rs  local_trend_mixture.rs  normal_observation_compilation.rs  orientation_tensor.rs  parameter_tuning.rs  performance_baseline.rs  polyharmonic_spline.rs  polynomial_spaces.rs  problem_ir.rs  radial_kernel_calculus.rs  sampled_thickness_validation.rs  smooth_global_kernels.rs  soft_objective_compilation.rs  tangent_observation_compilation.rs  trend_control_compilation.rs  wendland_kernels.rs
crates/georbf/examples/: anisotropy_diagnostics.rs  atomic_functionals.rs  constraint_diagnostics.rs  convex_solver.rs  coordinate_normalization.rs  cpd_rank_nullspace.rs  dense_equality_solver.rs  dimension_safe_geometry.rs  field_assembly.rs  geological_orientation.rs  global_anisotropy.rs  immutable_fitted_field.rs  kernel_metadata.rs  linear_constraints.rs  local_thickness.rs  local_trend_mixture.rs  normal_observations.rs  orientation_tensor.rs  polyharmonic_spline.rs  polynomial_spaces.rs  problem_ir.rs  radial_kernel_calculus.rs  smooth_global_kernels.rs  tangent_observations.rs  trend_controls.rs  wendland_kernels.rs
crates/georbf/src/: anisotropy.rs  anisotropy_diagnostics.rs  center_selection.rs  contour.rs  convex.rs  coordinates.rs  cpd.rs  diagnostics.rs  dimension.rs  execution.rs  field.rs  functional.rs  geometry.rs  infeasibility.rs  kernel.rs  kernel_calculus.rs  levels.rs  lib.rs  linear_constraints.rs  local_trend.rs  model.rs  normal_observations.rs  orientation.rs  orientation_tensor.rs  performance.rs  polynomial.rs  problem_ir.rs  project.rs  solver.rs  sparse.rs  tangent_observations.rs  thickness.rs  thickness_validation.rs  transform.rs  trend_controls.rs  tuning.rs  units.rs
crates/georbf/src/contour/: isoline.rs  isosurface.rs
crates/georbf/src/kernel/: polyharmonic.rs  smooth_global.rs  wendland.rs
crates/georbf/tests/: anisotropy.rs  anisotropy_diagnostics.rs  center_selection.rs  contour.rs  convex_solver.rs  coordinates.rs  cpd.rs  diagnostics.rs  execution.rs  field.rs  functional.rs  geometry.rs  infeasibility.rs  isoline.rs  isosurface.rs  kernel_calculus.rs  kernel_metadata.rs  levels.rs  linear_constraints.rs  local_trend.rs  model.rs  normal_observations.rs  orientation.rs  orientation_tensor.rs  orientation_tensor_allocations.rs  performance.rs  polyharmonic_spline.rs  polynomial.rs  problem_ir.rs  project.rs  smooth_global_kernels.rs  soft_losses.rs  solver.rs  sparse.rs  tangent_observations.rs  thickness.rs  thickness_validation.rs  trend_controls.rs  tuning.rs  wendland_kernels.rs
docs/: CODEX_WORKFLOW.md  MASTER_PLAN.md
docs/adr/: ADR-0001-single-unified-field-core.md  ADR-0002-no-surfe-model-types.md  ADR-0003-explicit-level-variables.md  ADR-0004-cpd-nullspace.md  ADR-0005-positive-definite-local-trends.md  ADR-0006-shared-core-multi-language-bindings.md  ADR-0007-no-hidden-regularization.md  ADR-0008-strict-local-mixture-background.md  ADR-0009-nalgebra-rank-review-backend.md  ADR-0010-nalgebra-dense-factorization-backend.md  ADR-0011-clarabel-convex-backend.md  ADR-0012-rstar-faer-compact-sparse-backends.md  README.md
docs/architecture/: ANISOTROPY.md  ARCHITECTURE.md  FFI_POLICY.md  MODEL_FORMAT.md  PROBLEM_IR.md  SOLVER_POLICY.md
docs/benchmarks/: REQ-CENTER-001.md  REQ-CONTOUR-001.md  REQ-CONTOUR-002.md  REQ-CONTOUR-003.md  REQ-CONVEX-001.md  REQ-CPD-001.md  REQ-FIELD-001.md  REQ-FUNC-001.md  REQ-INFEAS-001.md  REQ-IR-001.md  REQ-LINEQ-001.md  REQ-MODEL-001.md  REQ-NORMAL-001.md  REQ-PERF-001.md  REQ-POLY-001.md  REQ-SOLVE-001.md  REQ-SPARSE-001.md  REQ-SPIKE-001.md  REQ-SPIKE-002.md  REQ-SPIKE-003.md  REQ-SPIKE-004.md  REQ-TANGENT-001.md  REQ-THICK-001.md  REQ-THICK-002.md  REQ-TUNE-001.md
docs/math/: CONSTRAINT_SEMANTICS.md  CPD_AND_POLYNOMIALS.md  KERNEL_REQUIREMENTS.md  MATH_SPEC.md  NORMAL_AND_TANGENT.md  THICKNESS.md
docs/progress/: CURRENT.md  HISTORY.md
docs/release/: RELEASE_CHECKLIST.md
examples/: README.md
fuzz/: README.md
include/: README.md
requirements/: v1.yaml
schemas/: README.md
spikes/convex-backends/: Cargo.toml  README.md
spikes/convex-backends/src/: main.rs
spikes/factorization-backends/: Cargo.toml  README.md
spikes/factorization-backends/src/: main.rs
spikes/sparse-backends/: Cargo.toml  README.md
spikes/sparse-backends/src/: main.rs
testdata/: README.md
xtask/: Cargo.toml
xtask/src/: main.rs
(+52 files in other folders)
