[package]
name = "georbf-cli"
description = "Command-line adapter for GeoRBF"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[[bin]]
name = "georbf"
path = "src/main.rs"

[lints]
workspace = true
