[package]
name = "georbf-ffi"
description = "C ABI boundary for GeoRBF"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true
