[package]
name = "georbf-python"
description = "Python adapter for GeoRBF"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[lib]
name = "georbf_python"
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true
