[package]
name = "georbf"
description = "Unified scalar-field core for GeoRBF"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true

[[bench]]
name = "radial_kernel_calculus"
harness = false
