[package]
name = "georbf"
description = "Unified scalar-field core for GeoRBF"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
nalgebra = { version = "=0.35.0", default-features = false, features = ["std"] }

[[bench]]
name = "radial_kernel_calculus"
harness = false

[[bench]]
name = "polyharmonic_spline"
harness = false

[[bench]]
name = "smooth_global_kernels"
harness = false

[[bench]]
name = "wendland_kernels"
harness = false

[[bench]]
name = "global_anisotropy"
harness = false

[[bench]]
name = "polynomial_spaces"
harness = false

[[bench]]
name = "atomic_functionals"
harness = false

[[bench]]
name = "cpd_rank_nullspace"
harness = false

[[bench]]
name = "problem_ir"
harness = false
