[package]
name = "georbf"
description = "Unified scalar-field core for GeoRBF"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
clarabel = { version = "=0.11.1", default-features = false, features = ["serde"] }
nalgebra = { version = "=0.35.0", default-features = false, features = ["std"] }

[[bench]]
name = "radial_kernel_calculus"
harness = false

[[bench]]
name = "polyharmonic_spline"
harness = false

[[bench]]
name = "smooth_global_kernels"
harness = false

[[bench]]
name = "wendland_kernels"
harness = false

[[bench]]
name = "global_anisotropy"
harness = false

[[bench]]
name = "polynomial_spaces"
harness = false

[[bench]]
name = "atomic_functionals"
harness = false

[[bench]]
name = "cpd_rank_nullspace"
harness = false

[[bench]]
name = "problem_ir"
harness = false

[[bench]]
name = "field_assembly"
harness = false

[[bench]]
name = "dense_equality_solver"
harness = false

[[bench]]
name = "fitted_field_evaluation"
harness = false

[[bench]]
name = "level_compilation"
harness = false

[[bench]]
name = "soft_objective_compilation"
harness = false

[[bench]]
name = "linear_constraint_compilation"
harness = false

[[bench]]
name = "convex_solver"
harness = false

[[bench]]
name = "constraint_diagnostics"
harness = false

[[bench]]
name = "normal_observation_compilation"
harness = false

[[bench]]
name = "tangent_observation_compilation"
harness = false

[[bench]]
name = "local_thickness_compilation"
harness = false
