[package]
name = "georbf-convex-backend-spike"
version = "0.0.0"
edition = "2024"
rust-version = "1.96.1"
license = "MIT"
publish = false
description = "Reproducible convex QP and SOCP backend evaluation for GeoRBF"

[features]
default = ["clarabel-backend", "osqp-backend"]
clarabel-backend = ["dep:clarabel"]
osqp-backend = ["dep:osqp"]

[dependencies]
clarabel = { version = "=0.11.1", default-features = false, features = ["serde"], optional = true }
osqp = { version = "=1.0.1", default-features = false, optional = true }

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"
