[package]
name = "georbf-factorization-backend-spike"
version = "0.0.0"
edition = "2024"
rust-version = "1.96.1"
license = "MIT"
publish = false
description = "Reproducible dense Cholesky and pivoted LBLT backend evaluation for GeoRBF"

[features]
default = ["faer-backend", "nalgebra-backend"]
faer-backend = ["dep:faer"]
nalgebra-backend = ["dep:nalgebra"]

[dependencies]
faer = { version = "=0.24.4", default-features = false, features = ["std", "linalg"], optional = true }
nalgebra = { version = "=0.35.0", default-features = false, features = ["std"], optional = true }

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"
