[package]
name = "georbf-sparse-backend-spike"
version = "0.0.0"
edition = "2024"
rust-version = "1.96.1"
license = "MIT"
publish = false
description = "Reproducible compact-neighborhood, sparse-assembly, and factorization evaluation for GeoRBF"

[features]
default = ["faer-backend", "sprs-backend", "kiddo-index", "rstar-index"]
faer-backend = ["dep:faer"]
sprs-backend = ["dep:sprs", "dep:sprs-ldl"]
kiddo-index = ["dep:kiddo"]
rstar-index = ["dep:rstar"]

[dependencies]
faer = { version = "=0.24.4", default-features = false, features = ["std", "sparse-linalg"], optional = true }
kiddo = { version = "=5.3.2", default-features = false, optional = true }
rstar = { version = "=0.13.0", default-features = false, optional = true }
sprs = { version = "=0.11.4", default-features = false, optional = true }
sprs-ldl = { version = "=0.10.0", default-features = false, optional = true }

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"
